force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Survey_Response__c/Survey_Response__c.object-meta.xml
<CustomObject>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>