force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Survey_Response__c/fields/Passcode__c.field-meta.xml
<CustomField>
    <fullName>Passcode__c</fullName>
    <label>Passcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>