force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Survey_Response__c/fields/Respondent_Email__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Email__c</fullName>
    <label>Respondent Email</label>
    <type>Email</type>
</CustomField>