force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Survey_Response__c/fields/Respondent_Name__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Name__c</fullName>
    <label>Respondent Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField> 