force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Survey_Response__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <type>Lookup</type>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <referenceTo>Survey__c</referenceTo>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint> <!-- Prevent deleting Survey if Responses exist -->
</CustomField> 