force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Survey_Response__c/fields/Unique_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Response_ID__c</fullName>
    <label>Unique Response ID</label>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField> 